--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/Sultan2403/E-Commerce-Admin-Dashboard/issues"
   },
-  "homepage": "https://github.com/Sultan2403/E-Commerce-Admin-Dashboard#readme"
+  "homepage": "https://github.com/Sultan2403/E-Commerce-Admin-Dashboard#readme",
+  "dependencies": {
+    "celebrate": "^15.0.3",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.6",
+    "nodemon": "^3.1.11"
+  }
 }
